<resources>
    <string name="app_name">Foxtrip</string>
    <string name="tv_about_foxtrip">Về Foxtrip</string>
    <string name="tv_hotline">Hotline</string>
    <string name="tv_phone">0859605024</string>
    <string name="tv_email">Email</string>
    <string name="tv_main_mail">cloneappadobe@gmail.com</string>
    <string name="tv_fanpage">Facebook Fanpage</string>
    <string name="tv_name_fanpage">Foxtrip Official</string>
    <string name="tv_infor_support">Thông tin liên hệ</string>
    <string name="tv_zalo">Zalo</string>
    <string name="btn_filter">Bộ lọc nâng cao</string>
    <string name="til_search_tour_name">🔍 Tìm tour theo tên</string>
    <string name="tv_reserved">© 2025 Foxtrip. All rights reserved.</string>
    <string name="app_version">Phiên bản 1.0.0</string>
    <string name="home_title">Du lịch và trải nghiệm</string>
    <string name="home_subtitle">Trải nghiệm tạm thời với bộ sưu tập hình ảnh và video thực tế</string>
    <string name="btn_explore">Khám phá thêm</string>
    <string name="tv_password">Mật khẩu</string>
    <string name="tv_confirm_password">Xác nhận mật khẩu</string>
    <string name="btn_add">Thêm</string>
    <string name="tour_section">Tour</string>
    <string name="tv_cart">Giỏ hàng</string>
    <string name="tv_empty_cart">Giỏ hàng trống</string>
    <string name="btn_add_to_cart">Thêm vào giỏ</string>
    <string name="search_hint">Nhập tour cần tra</string>
    <string name="search_result">Kết quả tìm kiếm</string>
    <string name="tv_selected_province">Tỉnh/Thành (chọn nhiều)</string>
    <string name="btn_selected_province">Chọn Tỉnh/Thành</string>
    <string name="tv_selected_category">Category (chọn nhiều)</string>
    <string name="btn_selected_category">Chọn Category</string>
    <string name="tv_range_price">Khoảng giá (VND)</string>
    <string name="min_price">Giá tối thiểu</string>
    <string name="max_price">Giá tối đa</string>
    <string name="tv_date">Ngày bắt đầu / kết thúc</string>
    <string name="btn_start">Ngày bắt đầu</string>
    <string name="btn_end">Ngày kết thúc</string>
    <string name="btn_delete">Xóa</string>
    <string name="til_search_order_id">Tìm mã đơn hàng</string>
    <string name="btn_confirm_order">Xác nhận đơn hàng</string>
    <string name="btn_delete_order">Xóa đơn hàng</string>
    <string name="btn_apply">Áp dụng</string>
    <string name="tv_order">Đơn hàng</string>
    <string name="tv_history">Lịch sử</string>
    <string name="tv_wallet">Ví khách hàng</string>
    <string name="tv_about_we">Về chúng tôi</string>
    <string name="btn_logout">Đăng xuất</string>
    <string name="tv_username">Tên người dùng</string>
    <string name="tv_tours">Tours</string>
    <string name="tv_tour_detail">Chi tiết tour</string>
    <string name="btn_end_tour">Kết thúc</string>
    <string name="tv_users">Người dùng</string>
    <string name="tv_chatbot">Trợ lý du lịch ✨</string>
    <string name="tv_order_info">Thông tin đơn hàng</string>
    <string name="tv_order_id">Mã đơn:</string>
    <string name="tv_order_status">Trạng thái:</string>
    <string name="tv_revennues">Báo cáo doanh thu</string>
    <string name="tv_checkout">Thanh toán:</string>
    <string name="tv_total_price">Tổng tiền:</string>
    <string name="tv_create_date">Ngày tạo:</string>
    <string name="til_write">     Nhập...</string>
    <string name="tv_fullname">Họ và tên:</string>
    <string name="tv_fullname_hint">Họ và tên</string>
    <string name="tv_title_phone">Điện thoại:</string>
    <string name="tv_title_phone_hint">Số điện thoại</string>
    <string name="tv_title_email">Email:</string>
    <string name="btn_create_admin">Tạo quản trị viên</string>
    <string name="btn_checkout">Đặt hàng</string>
    <string name="tv_choose_payment">Hình thức thanh toán</string>
    <string name="tv_foxtrip_wallet">🪙 Foxtrip Wallet</string>
    <string name="btn_payment">Thanh toán</string>
    <string name="tv_default_price">0 VND</string>
    <string name="tv_default_tour">Số sản phẩm: 0</string>
    <string name="tv_search_email">Tìm kiếm email</string>
    <string name="tv_balance_wallet">Số dư: 0 VND</string>
    <string name="tv_zero_search">Không tìm thấy kết quả phù hợp</string>
    <string name="tv_emtpy_order">Không có đơn hàng</string>
    <string name="tv_emtpy_user">Không có người dùng</string>
    <string name="tv_title_address">Địa chỉ:</string>
    <string name="tv_history_detail">Chi tiết lịch sử tour</string>
    <string name="tv_history_infor">Thông tin chuyến đi</string>
    <string name="tv_title_address_hint">Địa chỉ</string>
    <string name="tv_wallet_up">Nạp 💳</string>
    <string name="tv_customers_infor">Thông tin khách hàng</string>
    <string name="tv_rule_services">Điều khoản dịch vụ</string>
    <string name="tv_order_detail">Chi tiết đơn hàng</string>
    <string name="about_foxtrip">Foxtrip là công ty du lịch của Việt Nam. Với định hướng đơn giản hóa quy trình du lịch cho
         mọi khách hàng, chúng tôi đã phát triển ứng dụng di động Foxtrip nhằm mang đến
        trải nghiệm đặt tour du lịch thuận tiện và đáng tin cậy cho người dùng.
         \n\nChúng tôi cung cấp đa dạng các gói tour du lịch trong nước với giá cả phải chăng,
        dịch vụ chuyên nghiệp và hệ thống thanh toán an toàn.
</string>

    <string name="rule_services">1. Giới thiệu
        \nỨng dụng FoxTrip cung cấp dịch vụ đặt tour du lịch trong nước tại Việt Nam.
        Bằng việc sử dụng ứng dụng, bạn đã đồng ý tuân thủ các điều khoản sau.
        \n\n2. Dịch vụ cung cấp\n• Đặt và thanh toán các gói tour du lịch
        \n• Quản lý đơn hàng và lịch sử đặt hàng\n• Hỗ trợ khách hàng 24/7
        \n• Ví điện tử nạp tiền và thanh toán\n\n3. Quyền và nghĩa vụ người dùng
        \n• Cung cấp thông tin chính xác khi đăng ký\n• Bảo mật thông tin tài khoản
        \n• Thanh toán đầy đủ và đúng hạn\n• Tuân thủ quy định dịch vụ.
        \n\n4. Chính sách thanh toán\n• Hỗ trợ thanh toán qua ví điện tử Foxtrip
        \n• Đảm bảo an toàn giao dịch
        \n\n5. Chính sách hủy tour\n• Khách hàng không được hủy tour khi đã thanh toán.\n• Hệ thống tự hủy đơn hàng trong 24h mà không thanh toán\n\n6. Trách nhiệm
        \nFoxtrip cam kết cung cấp dịch vụ tốt nhất nhưng không chịu trách nhiệm với các sự cố bất khả kháng như thiên tai, dịch bệnh hay thông tin sai sự thật hoặc lỗi của người dùng.
        \n\n7. Liên hệ\nMọi thắc mắc vui lòng liên hệ bộ phận hỗ trợ khách hàng.
</string>

    <string-array name="provinces_array">
        <item>Tuyên Quang</item>
        <item>Cao Bằng</item>
        <item>Lai Châu</item>
        <item>Lào Cai</item>
        <item>Thái Nguyên</item>
        <item>Điện Biên</item>
        <item>Lạng Sơn</item>
        <item>Sơn La</item>
        <item>Phú Thọ</item>
        <item>Bắc Ninh</item>
        <item>Quảng Ninh</item>
        <item>Hà Nội</item>
        <item>Hải Phòng</item>
        <item>Hưng Yên</item>
        <item>Ninh Bình</item>
        <item>Thanh Hóa</item>
        <item>Nghệ An</item>
        <item>Hà Tĩnh</item>
        <item>Quảng Trị</item>
        <item>Huế</item>
        <item>Đà Nẵng</item>
        <item>Quảng Ngãi</item>
        <item>Gia Lai</item>
        <item>Đắk Lắk</item>
        <item>Khánh Hòa</item>
        <item>Lâm Đồng</item>
        <item>Đồng Nai</item>
        <item>Tây Ninh</item>
        <item>TP. Hồ Chí Minh</item>
        <item>Đồng Tháp</item>
        <item>An Giang</item>
        <item>Vĩnh Long</item>
        <item>Cần Thơ</item>
        <item>Cà Mau</item>
    </string-array>

</resources>